--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Style+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
-
 /*
 font-family: 'Open Sans', sans-serif;
 font-family: 'Style Script', cursive;
@@ -39,7 +38,9 @@ html{
 
 /*****  Span Styles  ************/
 
-
+.white{
+    color: white;
+}
 .dark{
     color: black;
     opacity: 1;
@@ -107,15 +108,18 @@ body{
     justify-content: center;
     letter-spacing: 0;
     font-size: 2rem;
-    color: var(--LOGO_COLOR);
+    color: #58C5E8;
     opacity: 0;
     transition: 2s;
 }
 
+
+
 .navBar .logoFirstLetter{
     font-family: 'Style Script', cursive;
     font-size: 2.5rem;
-    color: var(--LOGO_COLOR);
+    color: #58C5E8;
+    transition: 2s;
 }
 
 .header .navBar .menuItems{
@@ -136,33 +140,16 @@ body{
     display: block;
     padding:  0.5rem 1rem;   
     color: var(--GREY);
-    transition: 1s;
+    transition: 0.3s;
     transform: rotateX(90deg);
     position: relative;
+
 }
 
-.header .menuItems li a::before{
-    content: '';
-    height: 3px;
-    width: 0%;
-    background-color: #8ee6fe;
-    border-radius: 5px;
-    position: absolute;
-    bottom:0%;
-    left:16%;
-    transition: 0.5s ease-in-out;
-}
-
-.header .menuItems li a:hover::before{
-    content: '';
-    height: 3px;
-    width: 70%;
-    background-color: #8ee6fe;
-    border-radius: 5px;
-    position: absolute;
-    bottom:0%;
-    left:16%;
-    transition: 0.5s ease-in-out;
+.header .menuItems li a:hover{
+    color: rgb(14, 140, 157);
+    font-weight: 400;
+    letter-spacing: 0.5px;
 }
 
 
@@ -213,7 +200,7 @@ body{
 
 .wheel{
     position: absolute;
-    opacity: 0.3;
+    opacity: 0.4;
     top: 20%;
     left: 20%;
     z-index:20;
@@ -385,7 +372,7 @@ body{
     transform: rotate(-90deg);
     letter-spacing: 2px;
     padding: 20px;
-    color: rgb(55, 182, 196);
+    color: black;
     font-size: 30px;
     letter-spacing: 5px;
     font-weight: 200;
@@ -402,7 +389,7 @@ body{
     width: 40vw;
     height: 0%;
     padding: 36px;
-    color: rgb(27, 97, 102);
+    color: black;
 
     box-shadow: 1px 2px 4px white;
     border-radius: 10px;
@@ -503,7 +490,7 @@ body{
     place-items: center;
 
     position: absolute;
-    bottom:0;
+    bottom:-10vh;
     right: 0;
 }
 
@@ -576,7 +563,7 @@ animation-delay: 5s;
 /**************  Profiles**************/
 
 .profiles{
-    margin-top: 20vh;
+    padding-top: 20vh;
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -591,27 +578,19 @@ animation-delay: 5s;
     position: absolute;
     bottom: 0;
     left: 0;
-    z-index: -10;
+    z-index: 1;
 }
 
 .profiles .profileEnvironment{
     height: 100vh;
     width: 100%;  
 
-    display:grid;
+    display:flex;
+    justify-content: end;
+    padding: 0 5em;
+    position: relative;
+    z-index: 200;
 
-    grid-template-areas: 
-    "title title title title title title"
-    "links links links links links links";
-    grid-template-rows: 8vh 80vh; 
-
-    /* background-color: brown; */
-    padding:  0 40px;
-
-    place-content: center;
-    grid-gap: 2em;
-
-    justify-items: center;
 }
 
 .profileTitle{
@@ -621,7 +600,7 @@ animation-delay: 5s;
     align-items: center;
 
     grid-area: title;
-    gap: 2rem;
+    gap: 3rem;
 }
 
 .linkWrap{
@@ -643,407 +622,410 @@ animation-delay: 5s;
     margin: 5px;
     border-radius: 50px;
     transition: 2s ease-in-out;
+    box-shadow: 1px 2px 5px #226b77;
 }
 
-.profileLinks{
-    width: 80vw;
-    height: 40vh;
-    /* background-color: #8ee6fe; */
-    grid-area:links;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    
-}
 
 
 .linkWrap a{
     text-decoration: none;
     color: #226b77;
     overflow: hidden;
-    width: 0px;
+    width: 90px;
+    transition: 1s;
+}
+
+.linkWrap a:hover{
+    color: black;
+    text-decoration: underline;
+}
+
+
+
+.myProfiles{
+    height: 50vh;
+    width: 50vw;
+    z-index: 100;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+    align-items: center;
+    
+    position: absolute;
+    left:-70%;
+    transition: 2s;
+}
+
+.title{
+    height:50vh;
+    width: 40%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: transparent;
+    position: relative;
+    overflow-y: hidden;
+
+}
+
+.titleWraper{
+    height: 80%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    position: absolute;
+    top: 50vh;
+    left: 3vw;
+    transition: 2s;
+}
+
+
+.cvButton{
+    border-radius: 50px;
+    width: 120px;
+    height: 50px;
+    display: flex;
+    color: #226b77;
+    border: 1px solid grey;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    background-color: transparent;
+    transition: 1s;
+}
+
+.cvButton:hover{
+    box-shadow: 1px 1px 5px #226b77;
+}
+
+.kite{
+    position: absolute;
+    left:0vw;
+    opacity: 0.4;
+    top: 0vh;
+    transform: rotate(90deg);
     transition: 3s;
+
+    animation: fly 50s linear infinite;
 }
 
-
-.profileTitle p{
-    width: 0%;
-    height: 3px;
-    border-radius: 10px;
-    background-color: #7DD0DE;
-    transition: 5s;
-    opacity: 0.8;
+@keyframes fly{
+    from{
+        left:-30vw;
+    }to{
+        left:120vw;
+    }
 }
-
-
-
-
 
 
 /************Project******************/
 
 .project{
-    height: 100vh;
     width: 100%;
-    background-color: #FAFAFA;
-    position: relative;
+    background-color: #7ED1DF;
+    min-height: 100vh;
+    display: flex;
+    overflow: hidden;
+    gap: 4rem;
+    align-items: center;
+    justify-content: center;
+
+    background-image: linear-gradient(#7ED1DF,white);
 }
 
-.project .projectArea{
-    height: 95vh;
-    width: 100vw;
-    background-color: #7DD0DE;
 
-    border: 2px soid black;
-    z-index: 60;
-    box-shadow: 0px 5px 5px rgb(203, 196, 196);
 
+.projectTitles{
+    height: 40vh;
+    width: 20vw;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
+    background-color: transparent;
 }
 
-.ProjectTitle ul{
-    /* background-color: pink; */
-    list-style: none;
-    display: flex;
-    gap: 2em;
-    padding: 2em;
+.projectTitles h1{
+    letter-spacing: 2px;
+    color: rgb(72, 2, 37);
 }
-.ProjectTitle ul li{
+
+.projectTitle{
+    font-size: 0.8rem;
     cursor: pointer;
+    transition: 0.5s;
+}
+
+.projectTitle:hover{
+    color: rgb(53, 53, 53);
+    box-shadow: 1px 1px 12px #226b77;
+}
+
+.agro{
+    background-color: rgba(0, 0, 0, 0.175);
+    padding: 10px 20px;
+    border-radius: 50px;
+}
+
+.blog{
+    padding: 10px 20px;
+    border-radius: 50px;
 }
 
 
-.projectContents{
-    /* background-color: red; */
+.card{
+    height: 80vh;
+    width: 50vw;
+    background-color: transparent;
     display: flex;
-    height: 70vh;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 20px;
+    gap: 2rem;
+
+}
+
+.heading{
     width: 100%;
+    height: 40vh;
+
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    justify-content: flex-start;
+
+}
+
+.heading h3{
+    color: rgb(10, 106, 103);
+    width:0%;
+    height: auto;
+    overflow: hidden;
+    transition: 3s;
+}
+
+.projectLogo{
+    width: 10vw;
+    height: 20vh;
+    background-color: transparent;
+    display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2em;
+}
+.projectLogo img{
+    width: 60%;
+    height: auto;
+    opacity: 0.8;
 }
 
-.projectContents .projectPic{
-    /* background-color: aqua; */
-    width: 50%;
-    height: 100%;
+.discription{
+    width: 90%;
 
-    display: grid;
-    grid-template-rows: 50% 50%;
-    align-items: center;
-    justify-items: center;
-
-    place-content: center;
-}
-
-.projectContents .projectPic .techStack{
-    width: 50%;
-    height: 50%;
-    /* background-color: #865326; */
-}
-
-.projectDetails{
-    width: 50%;
-    height: 100%;
-    /* background-color: #F6F6F7; */
-    overflow-y: scroll;
-
-}
-
-.projectDetails p{
-    padding: 1em 4em 1em 2em;
     text-align: justify;
+    color: rgb(33, 80, 127);
+    font-family: 'Open Sans', sans-serif;
 }
+
+.techStack{
+    width: 100%;
+    height: 30vh;
+    background-color: transparent;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+
+
+.techStack h3{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    width: 30%;
+    letter-spacing: 1px;
+    color: rgb(22, 44, 96);
+}
+
+.techImages{
+    width: 70%;
+    height: 100%;
+    background-color: transparent;
+    padding: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: no-wrap;
+    gap: 2em;
+    position: relative;
+    overflow: hidden;
+}
+
+.techImages img{
+    width : 40px;
+    height: auto;
+    transition: 1s;
+    overflow: hidden;
+    position: absolute;
+    bottom: -50px;
+    left:0;
+}
+
+.techImages img:nth-child(1){
+    left: 0%;
+    transition-delay: 0.2s;
+}
+.techImages img:nth-child(2){
+    left: 20%;
+    transition-delay: 0.5s;
+}
+.techImages img:nth-child(3){
+    left: 40%;
+    transition-delay: 0.8s;
+
+}
+.techImages img:nth-child(4){
+    left: 60%;
+    transition-delay: 1.1s;
+}
+.techImages img:nth-child(5){
+    left: 80%;
+    transition-delay: 1.4s;
+}
+
+
+.techImagesTwo{
+    width: 70%;
+    height: 100%;
+    background-color: transparent;
+    padding: 20px;
+
+    display: none;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: no-wrap;
+    gap: 2em;
+
+    position:relative;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.techImagesTwo img{
+    width : 40px;
+    height: auto;
+    transition: 1s;
+    position: absolute;
+    left:0;
+    top: -300px;
+    overflow: hidden;
+}
+
+
+.techImagesTwo img:nth-child(1){
+    left: 0%;
+    transition-delay: 0.2s;
+}
+
+.techImagesTwo img:nth-child(2){
+    left: 20%;
+    transition-delay: 0.5s;
+}
+
+.techImagesTwo img:nth-child(3){
+    left: 40%;
+    transition-delay: 0.8s;
+
+}
+.techImagesTwo img:nth-child(4){
+    left: 60%;
+    transition-delay: 1.1s;
+}
+.techImagesTwo img:nth-child(5){
+    left: 80%;
+    transition-delay: 1.4s;
+}
+
 
 /******Footer********/
 
 
 .footer{
-    min-height: 100vh;
+    background-color: #7ED1DF;
+    height: 50vh;
     width: 100%;
-    background-image: linear-gradient(#FAFAFA,#F6F6F7);
-    background-color: #F6F6F7;
-    padding: 40px 20px;
 
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
 
-
-    flex-flow: row wrap;
-    gap: 30px;
-
     position: relative;
 }
 
-.snowMountain{
-    position: absolute;
-    width: 100%;
-    height: auto;
-    bottom: 0;
-    left: 0;
-    opacity: 0.9;
-    z-index: 0;
-}
 
-
-
-/*********contact *****/
-
-.contact{
-    background-color: transparent;
-    z-index: 12;
-
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    padding: 20px;
-    border-radius: 5px;
-}
-
-
-
-
-.contact h1{
-    font-weight: 600;
-    color: #226b77;
-}
-
-.contact .contactEnvinonment{
+.footer .follow{
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-
-.contact .contactEnvinonment form{
-    display: grid;
-    grid-template-columns: 0.5fr 1fr;
-    gap: 2rem;
-    padding: 20px;
-    z-index: 1;
-    background-color: transparent;
-    padding: 3rem 0 0 0;
-}
-
-.contact .contactEnvinonment form input{
-    width: 100%;
-    height: 35px;
-    border-radius: 2px;
-}
-.contact .contactEnvinonment form label{
-    width: 100%;
-    height: 35px;
-    border-radius: 2px;
-}
-
-.contact .contactEnvinonment form input::placeholder{
-    padding: 12px;
-    font-size: 0.8em;
-}
-.contact .contactEnvinonment form textarea::placeholder{
-    padding: 8px;
-    font-size: 0.8em;
-}
-
-
- button{
-    padding: 12px 24px;
-    background-color: transparent;
-    border: 1.5px solid grey;
-    cursor: pointer;
-    width: 100%;
-
-    transition: 2s;
-    position: relative;
-    z-index: 1;
-    border-radius: 50px;
-}
-
-.reset::after{
-    content: '';
-    width:0%;
-    height: 100%;
-    background-color: white;
-    position: absolute;
-    top:0;
-    left:0;
-    transition: 1s linear;
-    z-index: -1;
-    overflow: hidden;
-    border-radius: 50px;
-    opacity: 0;
-}
-
-.reset:hover::after{
-    content: '';
-    width:100%;
-    height: 100%;
-    background-color: white;
-    position: absolute;
-    top:0;
-    left:0;
-    z-index: -1;
-    overflow: hidden;
-    border-radius: 50px;
-    opacity: 1;
-}
-
-.submit::after{
-    content: '';
-    width:0%;
-    height: 100%;
-    background-color: white;
-    position: absolute;
-    top:0;
-    left:0;
-    transition: 1s linear;
-    z-index: -1;
-    overflow: hidden;
-    border-radius: 50px;
-    opacity: 0;
-}
-
-.submit:hover::after{
-    content: '';
-    width:100%;
-    height: 100%;
-    background-color: white;
-    position: absolute;
-    top:0;
-    left:0;
-    z-index: -1;
-    overflow: hidden;
-    border-radius: 50px;
-    opacity: 1;
-}
-
-input{
-    border-radius: 5px;
-    height: 40px;
-    width: 20vw;
-    background-color: transparent;
-    border: 1px solid black;
-    color: var(--SEACOLOR);
-}
-
-textarea{
-    background-color: transparent;
-    border-radius: 5px;
-    padding: 12px;
-}
-
-/*   foot  */
-
-
-.foot{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    gap: 1em;
-    z-index: 10;
-    
-    height: 100%;
-    width: auto;
-    padding: 12px;
-}
-
-.footer .foot .follow{
     display:flex;
-    gap: 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: transparent;
+    z-index: 3;
+    gap: 1rem;
+    position: relative;
 }
-.footer .foot .follow h4{
+
+
+
+.footer .follow h4{
     font-weight: 400;
+    z-index: 2;
+
 }
 
-.footer .foot p{
-    font-weight: 300;
-    color:black;
+.footer .follow p{
+    font-weight: 400;
+    font-size: 0.8em;
+    z-index: 2;
 }
 
+.contactLinks{
+    display: flex;
+    gap: 1rem;
+}
 
-
-.footer .foot .follow a{
+.footer .follow .contactLinks a{
     width: 30px;
     opacity: 0.6;
+    z-index:2;
 }
 
-.footer .foot .follow a:hover{
+.footer .follow .contactLinks a:hover{
     opacity: 1;
 }
 
-.footer .foot .follow img{
+.footer .follow  .contactLinks img{
+    width: 30px;
     border-radius: 150%;
     padding: 5px;
     background-color: transparent;
-    /* box-shadow: 1px 2px 5px #226b77; */
-}
-
-.greet{
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    padding: 6px;
-    place-content: center;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.foot .greet .myPic{
-    width: 100px;
-    height: 100px;
-    border-radius: 150%;
-    padding: 5px;
-
-    opacity: 0.9;
+    box-shadow: 1px 2px 5px #226b77;
 }
 
 
 
-.greet .greetMessage{
-    display: flex;
-    width:90%;
-    height: 100px;
-
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-around;
-    padding: 16px 16px; 
-    /* color: white; */
-    /* background-color: #226b77; */
-
-    transition: 2s;
-    border-radius: 10px;
-    position: relative;
-
-    margin: 1em;
-}
-
-.greet .greetMessage p{
-    color:#226b77;
-    font-weight: 500;
-}
-
-.footerWish{
-    width:0%;
-    overflow: hidden;
-    transition: 5s;
-}
 
 .display{
     width: 100px;
@@ -1061,6 +1043,57 @@ textarea{
     z-index: 10000;
 }
 
+
+.sideBar{
+    width: 15vw;
+    height: 10vh;
+    background-color: transparent;
+    border: 1px solid grey;
+    position: fixed;
+    right: -300px;
+    transition: 3s;
+    bottom: 50px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 5px;   
+}
+
+.sideBar a{
+    width: 30px;
+}
+
+.sideBar a img{
+    opacity: 0.4;
+}
+
+.sideBar a img:hover{
+    opacity: 0.7;
+}
+
+.endBanner{
+    position: absolute;
+    width: 100%;
+    height: 10vh;
+    bottom: 0;
+    background-color: #7ED1DF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.endBanner p{
+    color: black;
+    font-size: 0.8em;
+}
+
+.endBanner p span{
+    font-size: 1em;
+    font-weight: 600;
+}
 /******** Mobile Screen**********/
 
 @media screen  and (max-width: 576px) { 
