--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ body{
 }
 
 .mail{
-    height: 10vh;
+    height: 5vh;
     width: 100%;
     background-color: #76D7F1;
     position: relative;
@@ -292,6 +292,7 @@ body{
     position: absolute;
     bottom: 0;
     right:0;
+    opacity: 0.5;
 }
 
 .gmail{
@@ -327,8 +328,8 @@ body{
     justify-content: center;
     align-items: center;
     padding: 20px;
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 
 .aboutContainer .snow{
@@ -492,8 +493,6 @@ body{
 }
 
 .bubbles{
-    grid-area: bubble;
-
     display: flex;
     width: 100%;
     align-items: center;
@@ -679,7 +678,6 @@ animation-delay: 5s;
     background-color: transparent;
     position: relative;
     overflow-y: hidden;
-
 }
 
 .titleWraper{
@@ -1165,7 +1163,7 @@ animation-delay: 5s;
     }
 
     .navBar .logo{
-        letter-spacing: 0.2rem;
+        letter-spacing: 0.4rem;
     }
 
     .cloud{
@@ -1270,14 +1268,14 @@ animation-delay: 5s;
     }
 
     .linkBar{
-        left:0;
-        bottom:10px;
+        top:0;
+        right:10px;
     }
 
     .gmail{
         font-size: 9px;
-        left: 40px;
-        bottom: 22px;
+        right:12px;
+        top: 0px;
     }
 
 
@@ -1299,6 +1297,7 @@ animation-delay: 5s;
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 0 20px;
     }
 
     .content .aboutHeading{
@@ -1309,11 +1308,18 @@ animation-delay: 5s;
         display: flex;
         align-items: center;
         justify-content: center;
+        padding-top:0px;
+        font-weight: 500;
     }
 
     .content p{
         width: 100%;
-        padding: 10px;
+        padding: 20px;
+    }
+
+    #skillSetHeading{
+        margin: 20px;
+        font-size: 1.5rem;
     }
 
     .tech{
@@ -1334,20 +1340,37 @@ animation-delay: 5s;
 
     /********profiles */
 
-    .profileEnvironment{
+    .profiles{
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        padding-top: 10vh;
+    }
+    .profileEnvironment{
+        display: flex;
+        flex-direction:column ;
+        padding:0;
+        justify-content: space-around;
+
     }
 
     .myProfiles{
-        height: 40vh;
-        width: 100%;
+        position: static;
         flex-direction: column;
-        align-items: center;
-        bottom: 0;
+        width: 100%;
+        height: 40vh;
     }
 
+    .title{
+        width: 100%;
+    }
+
+    .titleWraper{
+        position: static;
+        width: 100%;
+        height: 20vh;
+    }
+    .titleWraper h1{
+        display: none;
+    }
 
     /********Projects */
 
