--- a/css/style.css
+++ b/css/style.css
@@ -622,8 +622,10 @@ animation-delay: 5s;
     justify-content: center;
     justify-items: start;
     align-items: center;
+    gap: 16px;
 
     transition: 3s linear;
+
 }
 
 .linkWrap img{
@@ -649,7 +651,6 @@ animation-delay: 5s;
     color: black;
     text-decoration: underline;
 }
-
 
 
 .myProfiles{
@@ -1123,39 +1124,51 @@ animation-delay: 5s;
         width: 50px;
     }
 
+    .header{
+        padding: 0px 16px;
+    }
+
     .header .navBar{
         padding: 0 0.5em;
     }
 
 
     .header .navBar .menuItems{
-        min-height: 12rem;
-        width: 20rem;
+        height: 22rem;
+        width: 22rem;
         display: flex;
         flex-direction: column;
         background-color: var(--MENU_BG);
         -webkit-backdrop-filter: blur(8px);
         backdrop-filter: blur(8px);
         position: absolute;
+        align-items: end;
+        justify-content: space-evenly;
         top:-20rem;
         right:-20rem;
         transition: 0.5s;
-        border-bottom-left-radius: 25rem;
-        padding: 0  0 4rem 4rem;     
+        border-bottom-left-radius: 150%;
+        padding: 1rem 4rem;     
     }
 
     .header .navBar .menuItems li a{
         color: var(--BLACK_COLOR);
+        font-size: 0.8em;
     }
+
+ 
 
     .hideMenu{
         display: flex;
         position:absolute;
-        right: 0;
-        top: 0;
+        left: 25%;
+        top: 25%;
         cursor: pointer;
         width: 80px;
-        padding: 0;    
+        padding: 12px;   
+        opacity: 0.8;
+        align-items: center;
+        justify-content: center;
     }
 
     .hideMenu span{
@@ -1203,7 +1216,7 @@ animation-delay: 5s;
         opacity: 0.8;
     }
 
-     .sea{
+    .sea{
         width: 100%;
         bottom: 0px;
         height: 150px;
@@ -1341,15 +1354,25 @@ animation-delay: 5s;
     /********profiles */
 
     .profiles{
+        min-height: 50vh;
         flex-direction: column;
-        padding-top: 10vh;
+        padding-top: 50px;        
     }
+
+    .profiles h1{
+        width: 100%;
+        text-align: center;
+        padding: 24px;
+        font-size: 1.2rem;
+        letter-spacing: 2px;
+    }
+
     .profileEnvironment{
+        height: 60vh;
         display: flex;
         flex-direction:column ;
         padding:0;
         justify-content: space-around;
-
     }
 
     .myProfiles{
@@ -1361,6 +1384,9 @@ animation-delay: 5s;
 
     .title{
         width: 100%;
+        height: 10vh;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
 
     .titleWraper{
@@ -1371,6 +1397,8 @@ animation-delay: 5s;
     .titleWraper h1{
         display: none;
     }
+
+
 
     /********Projects */
 
@@ -1385,6 +1413,10 @@ animation-delay: 5s;
         height: 20vh;
     }
 
+    .projectTitles h1{
+        font-size: 1.2rem;
+    }
+
     .card{
         height: 50vh;
         width: 100%;
@@ -1396,6 +1428,7 @@ animation-delay: 5s;
     .titleWrapper{
         flex-direction: row;
         height: 80px;
+        gap: 12px;
     }
 
     .heading{
@@ -1417,6 +1450,8 @@ animation-delay: 5s;
         width: 60%;
     }
 
+
+    /*********Footer*****/
 
 
     .footer{
