--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body{
     transition: 2s;
 }
 
-.header .navBar .menuItems{
+.menuItems{
     list-style: none;
     display: flex;  
     flex-flow: row nowrap;
@@ -130,7 +130,8 @@ body{
     justify-content: space-around;
     width: 50%;
 }
-.hideMenu{
+
+.hideMenuIcon{
     display:none;
 }
 
@@ -154,7 +155,7 @@ body{
 
 
 
-.showMenu{
+.showMenuIcon{
     display: none;
     cursor: pointer;
 }
@@ -1114,69 +1115,75 @@ animation-delay: 5s;
 /******** Mobile Screen**********/
 
 @media screen  and (max-width: 576px) { 
+
     .frontPage{
         width:100%;
         height: 80vh;
       }
 
-    .showMenu{
-        display: flex;
-        width: 50px;
-    }
-
     .header{
         padding: 0px 16px;
     }
 
-    .header .navBar{
+    .navBar{
         padding: 0 0.5em;
     }
 
+    .navBar .logo{
+        letter-spacing: 0.4rem;
+    }
 
-    .header .navBar .menuItems{
-        height: 22rem;
-        width: 22rem;
+    .showMenuIcon{
+        display: flex;
+        width: 50px;
+        opacity: 0.7;
+    }
+
+    .hideMenuIcon{
+        display: flex;
+        cursor: pointer;
+        width: 80px;
+        padding: 12px;   
+        opacity: 0.5;
+        align-items: center;
+        justify-content: center;
+
+        position: absolute;
+        left: 15%;
+        top: 25%;
+    }
+
+    .hideMenuIcon span{
+        font-size: 50px;
+    }
+
+
+   .menuItems{
+        height: 350px;
+        width: 350px;
         display: flex;
         flex-direction: column;
         background-color: var(--MENU_BG);
         -webkit-backdrop-filter: blur(8px);
         backdrop-filter: blur(8px);
         position: absolute;
-        align-items: end;
-        justify-content: space-evenly;
-        top:-20rem;
-        right:-20rem;
+        align-items: flex-end;
+        justify-content: space-around;
+        top: -20rem;
+        right: -20rem;
         transition: 0.5s;
         border-bottom-left-radius: 150%;
-        padding: 1rem 4rem;     
+        padding: 2rem 4rem;  
+        
     }
 
+    
     .header .navBar .menuItems li a{
+        transform: rotateX(0deg);
+
         color: var(--BLACK_COLOR);
-        font-size: 0.8em;
-    }
-
- 
-
-    .hideMenu{
-        display: flex;
-        position:absolute;
-        left: 25%;
-        top: 25%;
-        cursor: pointer;
-        width: 80px;
-        padding: 12px;   
-        opacity: 0.8;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .hideMenu span{
-        font-size: 50px;
-    }
-
-    .navBar .logo{
-        letter-spacing: 0.4rem;
+        font-size: 1em;
+        letter-spacing: 2px;
     }
 
     .cloud{
@@ -1204,6 +1211,9 @@ animation-delay: 5s;
 }
 
 @media screen  and (max-width: 400px) {
+
+
+
     .header{
         height: 90px;
     }
@@ -1212,8 +1222,8 @@ animation-delay: 5s;
         opacity: 1;
     }
 
-    .header .navBar .showMenu{
-        opacity: 0.8;
+    .header .navBar .showMenuIcon{
+        opacity: 0.7;
     }
 
     .sea{
@@ -1468,6 +1478,24 @@ animation-delay: 5s;
     .sideBar a{
         width: 20px;
     }
-    
+    .contactLinks{
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
+    .contactLinkWrapper{
+        width: 50%;
+        height: 10vh;
+        /* background-color: red; */
+        display: flex;
+        align-items: center;
+        justify-content: space-around;   
+    }
+
+    .endBanner{
+        height: 5vh;
+    }
+    
 }
